# silo

./: .gitignore  Cargo.toml  README.md
apps/desktop-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-ui/src-tauri/src/: main.rs
apps/desktop-ui/ui/: index.html
apps/mcp-server/: Cargo.toml
apps/mcp-server/src/: agent.rs  api.rs  chunk.rs  config.rs  database.rs  embed.rs  extract.rs  filesystem.rs  indexer.rs  ingest.rs  lib.rs  llm.rs  main.rs  server.rs  state.rs  tools.rs
