[package]
name = "silo-desktop"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }

# Use the MCP server core as a library for UI integration (no stdio needed)
mcp-server = { path = "../../mcp-server", features = ["mvp"] }


